// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <Breadcrumb> to render 1`] = `
<Breadcrumb
  className="custom-class"
  isLast={false}
  linkComponent={[Function]}
  path="woohoos"
  pathname="/foo/bar/fat/bat"
  subpaths={
    Array [
      Object {
        "path": "cool",
        "title": "Cool",
      },
      Object {
        "path": "wow",
        "title": "Cool",
      },
    ]
  }
  title="Breadcrumb Title"
>
  <li
    className="gds-page-header__breadcrumbs-list-item custom-class gds-page-header__breadcrumbs-list-item--has-menu"
  >
    <BreadcrumbMenu
      linkComponent={[Function]}
      menu={
        Array [
          Object {
            "path": "cool",
            "title": "Cool",
          },
          Object {
            "path": "wow",
            "title": "Cool",
          },
        ]
      }
      path="woohoos"
    >
      <div
        className="gds-page-header__breadcrumbs-menu"
        onClick={[Function]}
      >
        <div
          className="gds-page-header__breadcrumbs-menu-dots"
        />
        <div
          className="gds-bubble__menu gds-bubble__menu--left gds-bubble__menu--sm"
        >
          <ul
            className="gds-bubble__menu-list"
          >
            <li
              className="gds-bubble__menu-list-item -ellipsis"
              key="cool"
            >
              <BreadcrumbLink
                className="gds-bubble__menu-list-link -text-tr-cap"
                to="woohoos/cool"
              >
                <a
                  className="gds-bubble__menu-list-link -text-tr-cap"
                  href="woohoos/cool"
                >
                  Cool
                </a>
              </BreadcrumbLink>
            </li>
            <li
              className="gds-bubble__menu-list-item -ellipsis"
              key="wow"
            >
              <BreadcrumbLink
                className="gds-bubble__menu-list-link -text-tr-cap"
                to="woohoos/wow"
              >
                <a
                  className="gds-bubble__menu-list-link -text-tr-cap"
                  href="woohoos/wow"
                >
                  Cool
                </a>
              </BreadcrumbLink>
            </li>
          </ul>
        </div>
         
      </div>
    </BreadcrumbMenu>
    <BreadcrumbLink
      className="gds-page-header__breadcrumbs-link"
      to="woohoos"
    >
      <a
        className="gds-page-header__breadcrumbs-link"
        href="woohoos"
      >
        Breadcrumb Title
      </a>
    </BreadcrumbLink>
  </li>
</Breadcrumb>
`;

exports[`Expect <Breadcrumb> to render as last 1`] = `
<Breadcrumb
  className="custom-class"
  isLast={true}
  linkComponent={[Function]}
  path="woohoos"
  pathname="/foo/bar/fat/bat"
  subpaths={
    Array [
      Object {
        "path": "cool",
        "title": "Cool",
      },
      Object {
        "path": "wow",
        "title": "Cool",
      },
    ]
  }
  title="Breadcrumb Title"
>
  <li
    className="gds-page-header__breadcrumbs-list-item custom-class gds-page-header__breadcrumbs-list-item--has-menu"
  >
    <BreadcrumbMenu
      linkComponent={[Function]}
      menu={
        Array [
          Object {
            "path": "cool",
            "title": "Cool",
          },
          Object {
            "path": "wow",
            "title": "Cool",
          },
        ]
      }
      path="woohoos"
    >
      <div
        className="gds-page-header__breadcrumbs-menu"
        onClick={[Function]}
      >
        <div
          className="gds-page-header__breadcrumbs-menu-dots"
        />
        <div
          className="gds-bubble__menu gds-bubble__menu--left gds-bubble__menu--sm"
        >
          <ul
            className="gds-bubble__menu-list"
          >
            <li
              className="gds-bubble__menu-list-item -ellipsis"
              key="cool"
            >
              <BreadcrumbLink
                className="gds-bubble__menu-list-link -text-tr-cap"
                to="woohoos/cool"
              >
                <a
                  className="gds-bubble__menu-list-link -text-tr-cap"
                  href="woohoos/cool"
                >
                  Cool
                </a>
              </BreadcrumbLink>
            </li>
            <li
              className="gds-bubble__menu-list-item -ellipsis"
              key="wow"
            >
              <BreadcrumbLink
                className="gds-bubble__menu-list-link -text-tr-cap"
                to="woohoos/wow"
              >
                <a
                  className="gds-bubble__menu-list-link -text-tr-cap"
                  href="woohoos/wow"
                >
                  Cool
                </a>
              </BreadcrumbLink>
            </li>
          </ul>
        </div>
         
      </div>
    </BreadcrumbMenu>
    Breadcrumb Title
  </li>
</Breadcrumb>
`;

exports[`Expect <Breadcrumb> to render with hidden menus 1`] = `
<Breadcrumb
  className="custom-class"
  hideMenus={true}
  isLast={false}
  linkComponent={[Function]}
  path="woohoos"
  pathname="/foo/bar/fat/bat"
  subpaths={
    Array [
      Object {
        "path": "cool",
        "title": "Cool",
      },
      Object {
        "path": "wow",
        "title": "Cool",
      },
    ]
  }
  title="Breadcrumb Title"
>
  <li
    className="gds-page-header__breadcrumbs-list-item custom-class"
  >
    <BreadcrumbLink
      className="gds-page-header__breadcrumbs-link"
      to="woohoos"
    >
      <a
        className="gds-page-header__breadcrumbs-link"
        href="woohoos"
      >
        Breadcrumb Title
      </a>
    </BreadcrumbLink>
  </li>
</Breadcrumb>
`;

exports[`Expect <Breadcrumb> to render without subpath menu 1`] = `
<Breadcrumb
  className="custom-class"
  isLast={false}
  linkComponent={[Function]}
  path="woohoos"
  pathname="/foo/bar/fat/bat"
  subpaths={null}
  title="Breadcrumb Title"
>
  <li
    className="gds-page-header__breadcrumbs-list-item custom-class"
  >
    <BreadcrumbLink
      className="gds-page-header__breadcrumbs-link"
      to="woohoos"
    >
      <a
        className="gds-page-header__breadcrumbs-link"
        href="woohoos"
      >
        Breadcrumb Title
      </a>
    </BreadcrumbLink>
  </li>
</Breadcrumb>
`;
